--- a/build.gradle
+++ b/build.gradle
@@ -126,6 +126,8 @@ dependencies {
     implementation 'io.sentry:sentry-logback:5.5.3'
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.300'
+    implementation 'com.amazonaws:aws-java-sdk-rekognition:1.12.300'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
